@@ -5,6 +5,8 @@ Revision history for Perl extension Math::Prime::Util.
     - Accuracy improvement and measurements for math functions.
     - Remove simple sieve -- it wasn't being used, and was just around for
       performance comparisons.
+    - Static presieve for 7, 11, and 13.  1k of ROM used for prefilling sieve
+      memory, meaning we can skip the 7, 11, and 13 loops.  ~15% speedup.
 
 0.07  17 June 2012
     - Fixed a bug in next_prime found by Lou Godio (thank you VERY much!).
